# RecStore

./: .gitignore  .gitmodules  AGENTS.md  mkdocs.yml  recstore_config.json
.github/: cliff.toml  copilot-instructions.md
docs/: config.md  (+2 more)
src/: CMakeLists.txt
src/base/: CMakeLists.txt  flatc.h
src/base/report/: report_client.cpp  report_client.h
src/base_ps/: cache_ps_impl.h
src/framework/: op.cc  op.h  op_mock.cc
src/framework/pytorch/: CMakeLists.txt  op_torch.cc
src/framework/pytorch/python_client/: client_test.py
src/grpc_ps/: CMakeLists.txt  brpc_ps_server.cpp  grpc_ps_client.cpp  grpc_ps_server.cpp
src/optimizer/: optimizer.cpp  optimizer.h
src/ps/brpc/: CMakeLists.txt  brpc_ps_client.cpp  brpc_ps_client_test.cpp  brpc_ps_server.cpp
src/ps/grpc/: CMakeLists.txt  dist_grpc_ps_client_test.cpp  grpc_ps_bench.cpp  grpc_ps_client.h  grpc_ps_client_test.cpp  grpc_ps_server.cpp
src/python/pytorch/recstore/: Dataset.py  KVClient.py  optimizer.py
src/python/pytorch/torchrec_kv/: EmbeddingBag.py
src/storage/dram/: extendible_hash.cpp  extendible_hash.h
src/storage/hybrid/: index.h  index_factory.h  lru_cache.h  pointer.h  value.h
src/storage/io_backend/: io_backend.h  io_backend_register.h  io_uring_backend.h  spdk_backend.h
src/storage/kv_engine/: base_kv.h  engine_cceh.h  engine_extendible_hash.h  engine_hybridkv.h
src/storage/ssd/: CCEH.cpp  CCEH.h  CMakeLists.txt  spdk_backend.h
src/test/: CMakeLists.txt  test_cceh.cpp  test_engine_cceh.cpp  test_engine_extendible_hash.cpp  test_extendible_hash.cpp  test_index.cpp  test_report.cpp
(+25 files in other folders)
